--- a/LoKro.html
+++ b/LoKro.html
@@ -37,7 +37,7 @@
   
             <div class="text-2">LoKro</div>
   
-            <div class="text-3">Name: Leo</div>
+            <div class="text-3">Name: -</div>
             
             <div class="text-3">Age: 12 Jahre</div>
 
