--- a/Kuerbisfloh55.html
+++ b/Kuerbisfloh55.html
@@ -37,7 +37,7 @@
   
             <div class="text-2">Kuerbisfloh55</div>
   
-            <div class="text-3">Name: Phillip</div>
+            <div class="text-3">Name: -</div>
             
             <div class="text-3">Age: 12 Jahre</div>
 
