--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/0b0t.html" class="text">0b0t information</a>  
+              <a href="https://teamklb.github.io/0b0t.html" class="text">anarchy information</a>  
               <a href="https://teamklb.github.io/0b0t.html">https://teamklb.github.io/0b0t.html</a>            
             </div>
           </div>
@@ -122,6 +122,14 @@
               <a href="./0b0t.html" class="text">WotB information</a>
               <br>
               <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA">https://teamklb.github.io/home</a>
+            </div>
+          </div>
+          
+          <div class="card">
+            <div class="box">
+              <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA" class="text">Partner information</a>
+              <br>
+              <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA">https://bit.ly/teamklb-yt</a>
             </div>
           </div>
           </div>
