--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/0b0t.html" class="text">anarchy information</a>  
+              <a href="https://teamklb.github.io/0b0t.html" class="text">Anarchy information</a>  
               <a href="https://teamklb.github.io/0b0t.html">https://teamklb.github.io/0b0t.html</a>            
             </div>
           </div>
