--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
     <meta property="og:type" content="website" />
 
-    <meta property="og:title" content="Title" />
+    <meta property="og:title" content="Team KLB Inc." />
 
     <meta
       property="og:description"
-      content="A simple, multipurpose Discord bot."
+      content="Join [Team KLB Inc.] for free! Right now!"
     />
 
 
