--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="card">
             <div class="box">
               <a href="https://teamklb.github.io/0b0t.html" class="text">Anarchy information</a>  
-              <a href="https://teamklb.github.io/0b0t.html">./0b0t.html</a>            
+              <a href="https://teamklb.github.io/0b0t.html">#/0b0t.html</a>            
             </div>
           </div>
 
