--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/main/0b0t.html" class="text">Anarchy information</a>  
-              <a href="https://teamklb.github.io/main/0b0t.html">#/0b0t.html</a>            
+              <a href="https://teamklb.github.io/main/anarchy.html" class="text">Anarchy information</a>  
+              <a href="https://teamklb.github.io/main/anarchy.html">Anarchy information</a>            
             </div>
           </div>
 
