--- a/anarchy.html
+++ b/anarchy.html
@@ -10,14 +10,8 @@
     <link rel="icon" href="./files/LoGo.png"/>
 </head>
 <body>
-
-    <p> </p>
-    <p> </p>
-    <p> ok</p>
-    <p> ok</p>
-    <p> </p>
-    <p> </p>
-    <p> ok</p>
-    <p> </p>
+    
+    <a class="this-is-pain" href="https://teamklb.github.io/main/anarchy.html/0b0t.html">0b0t.org</a>
+    
 </body>
 </html>
