--- a/anarchy.html
+++ b/anarchy.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     
-    <a class="this-is-pain" href="https://teamklb.github.io/main/anarchy.html/0b0t.html">0b0t.org</a>
+    <div>
+        <a class="this-is-pain" href="https://teamklb.github.io/main/anarchy.html/0b0t.html">0b0t.org</a>
+    </div>
     
 </body>
 </html>
