--- a/index.html
+++ b/index.html
@@ -95,41 +95,27 @@
         </h2>
 
         <div class="stats-content">
-          <div class="card">
-            <div class="box">
-              <a href="https://discord.gg/zneynDTErq" class="text">Discord-Server</a>
-              <a href="https://discord.gg/zneynDTErq">https://discord.gg/zneynDTErq</a>
-            </div>
-          </div>
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/main/anarchy.html" class="text">Anarchy information</a>  
+              <a href="https://teamklb.github.io/main/anarchy.html" class="text">Anarchy</a>  
               <a href="https://teamklb.github.io/main/anarchy.html">Anarchy information</a>            
             </div>
           </div>
 
           <div class="card">
             <div class="box">
-              <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA" class="text">Youtube</a>
+              <a href="https://teamklb.github.io/main/socials.html" class="text">Socials</a>
               <br>
-              <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA">https://bit.ly/teamklb-yt</a>
+              <a href="https://teamklb.github.io/main/socials.html">https://youtube.com/</a>
             </div>
           </div>
 
           <div class="card">
             <div class="box">
-              <a href="./0b0t.html" class="text">WotB information</a>
+              <a href="https://teamklb.github.io/main/others.html" class="text">others</a>
               <br>
-              <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA">https://teamklb.github.io/home</a>
-            </div>
-          </div>
-          
-          <div class="card">
-            <div class="box">
-              <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA" class="text">Partner information</a>
-              <br>
-              <a href="https://youtube.com/channel/UCnUIr4D-cD_hL3aUf1fnreA">https://bit.ly/teamklb-yt</a>
+              <a href="https://teamklb.github.io/main/others.html">https://teamklb.github.io/main/others.html</a>
             </div>
           </div>
           </div>
