--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/main/others.html" class="text">others</a>
+              <a href="https://teamklb.github.io/main/partner.html" class="text">Partner</a>
               <br>
-              <a href="https://teamklb.github.io/main/others.html">https://teamklb.github.io/main/others.html</a>
+              <a href="https://teamklb.github.io/main/partner.html">https://teamklb.github.io/main/partner.html</a>
             </div>
           </div>
           </div>
