--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/main/anarchy.html" class="text">Anarchy</a>  
-              <a href="https://teamklb.github.io/main/anarchy.html">Anarchy information</a>            
+              <a href="https://teamklb.github.io/main/anarchy.html" class="text">Anarchy information</a>  
+              <a href="https://teamklb.github.io/main/anarchy.html">https://teamklb.github.io/main/anarchy.html</a>            
             </div>
           </div>
 
