--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/main/anarchy.html" class="text">Anarchy information</a>  
-              <a href="https://teamklb.github.io/main/anarchy.html">https://teamklb.github.io/main/anarchy.html</a>            
+              <a href="#/anarchy.html" class="text">Anarchy information</a>  
+              <a href="#</anarchy.html">#/anarchy.html</a>            
             </div>
           </div>
 
@@ -107,7 +107,7 @@
             <div class="box">
               <a href="https://teamklb.github.io/main/socials.html" class="text">Socials</a>
               <br>
-              <a href="https://teamklb.github.io/main/socials.html">https://youtube.com/</a>
+              <a href="https://teamklb.github.io/main/socials.html">#/socials.html</a>
             </div>
           </div>
 
@@ -115,7 +115,7 @@
             <div class="box">
               <a href="https://teamklb.github.io/main/partner.html" class="text">Partner</a>
               <br>
-              <a href="https://teamklb.github.io/main/partner.html">https://teamklb.github.io/main/partner.html</a>
+              <a href="https://teamklb.github.io/main/partner.html">#/partner.html</a>
             </div>
           </div>
           </div>
