--- a/index.html
+++ b/index.html
@@ -98,24 +98,24 @@
 
           <div class="card">
             <div class="box">
-              <a href="#/anarchy.html" class="text">Anarchy information</a>  
-              <a href="#</anarchy.html">#/anarchy.html</a>            
+              <a href="./anarchy.html" class="text">Anarchy information</a>  
+              <a href="./anarchy.html">./anarchy.html</a>            
             </div>
           </div>
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/main/socials.html" class="text">Socials</a>
+              <a href="./socials.html" class="text">Socials</a>
               <br>
-              <a href="https://teamklb.github.io/main/socials.html">#/socials.html</a>
+              <a href="./socials.html">./socials.html</a>
             </div>
           </div>
 
           <div class="card">
             <div class="box">
-              <a href="https://teamklb.github.io/main/partner.html" class="text">Partner</a>
+              <a href="./partner.html" class="text">Partner</a>
               <br>
-              <a href="https://teamklb.github.io/main/partner.html">#/partner.html</a>
+              <a href="./partner.html">./partner.html</a>
             </div>
           </div>
           </div>
