--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
           <div class="card">
             <div class="box">
-              <a href="./anarchy.html" class="text">Anarchy information</a>  
-              <a href="./anarchy.html">./anarchy.html</a>            
+              <a href="./anarchy.html/index.html" class="text">Anarchy information</a>  
+              <a href="./anarchy.html/index.html">./anarchy.html</a>            
             </div>
           </div>
 
