--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
           <div class="card">
             <div class="box">
-              <a href="./anarchy.html" class="text">Anarchy links</a>  
+              <a href="./anarchy.html" class="text">Anarchy information</a>  
               <br>
               <a href="./anarchy.html">./anarchy.html</a>            
             </div>
