--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul class="menu">
           <li><a href="#home" class="menu-btn">Home</a></li>
 
-          <li><a href="#stats" class="menu-btn">Stats</a></li>
+          <li><a href="#stats" class="menu-btn">Links</a></li>
 
           <li><a href="#contributors" class="menu-btn">TeamOwners</a></li>
 
