--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
       </div>
     </section>
 
-    <section class="stats" id="stats">
+    <section class="links" id="links">
       <div class="max-width">
         <h2 class="title">
           Links
         </h2>
 
-        <div class="stats-content">
+        <div class="links-content">
 
           <div class="card">
             <div class="box">
