--- a/imprint.html
+++ b/imprint.html
@@ -79,13 +79,13 @@
           <div class="text-3">[Imprint | Impressum]</div>
           <br>
           <br>
-          <h1>Location:</h1><a>Kärnten | Österreich, Austria</a>
+          <h1>Location:</h1><a>carton</a>
           <br>
           <br>
-          <h1>E-mail Adress:</h1><a>elias.kofler@brg-spittal.at</a>
+          <h1>E-mail Adress:</h1><a>carton@carton.carton</a>
           <br>
           <br>
-          <h1>Full name of the owner:</h1><a>Elias Kofler</a>
+          <h1>Full name of the owner:</h1><a>Carton Carton</a>
         
         </div>
       </div>
